<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/parametres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="182dp"
        android:layout_marginLeft="182dp"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="140dp"
        android:layout_marginRight="140dp"
        android:layout_marginBottom="646dp"
        android:text="@string/parametres"
        android:textColor="#673AB7"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.83"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.538" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="140dp"
        android:text="@string/themes"
        android:textColor="#673AB7"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="36dp"
        android:background="@color/purple_500"
        android:onClick="onClickNormalTheme"
        android:text="@string/clair"
        android:textColor="#FFFCFC"
        app:backgroundTint="@color/purple_500"
        app:iconTint="@color/purple_500"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/parametres"
        app:rippleColor="@color/purple_500" />

    <Button
        android:id="@+id/btnDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="57dp"
        android:layout_marginRight="57dp"
        android:background="@color/purple_500"
        android:onClick="onClickDarkTheme"
        android:text="@string/sombre"
        android:textColor="#FFFFFF"
        app:backgroundTint="@color/purple_500"
        app:iconTint="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parametres"
        app:rippleColor="@color/purple_500" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="60dp"
        android:text="@string/langue"
        android:textColor="#673AB7"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <Button
        android:id="@+id/btnFr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="32dp"
        android:background="@color/purple_500"
        android:text="@string/francais"
        android:textColor="#FFFFFF"
        app:backgroundTint="@color/purple_500"
        app:iconTint="@color/purple_500"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/btnLight"
        app:rippleColor="@color/purple_500" />

    <Button
        android:id="@+id/btnEn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:background="@color/purple_500"
        android:text="@string/anglais"
        android:textColor="#FFFFFF"
        app:backgroundTint="@color/purple_500"
        app:iconTint="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDark"
        app:rippleColor="@color/purple_500" />

    <Button
        android:id="@+id/btnMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginLeft="158dp"
        android:layout_marginTop="368dp"
        android:background="@color/purple_500"
        android:text="@string/btnMain"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:backgroundTint="@color/purple_500"
        app:iconTint="@color/purple_500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFr"
        app:rippleColor="@color/purple_500" />
</androidx.constraintlayout.widget.ConstraintLayout>