<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/titre"
        android:textColor="#673AB7"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/etTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/date"
        android:textColor="#673AB7"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/etDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/heure"
        android:textColor="#673AB7"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/etTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:text="@string/contact"
        android:textColor="#673AB7"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/etContact"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/etat"
        android:textColor="#673AB7"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/state"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <CheckBox
        android:id="@+id/state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="252dp"
        android:layout_marginRight="252dp"
        android:text="@string/cbEtat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/etContact" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="64dp"
        android:text="RDV"
        android:textColor="#673AB7"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etDate"
        android:layout_width="150dp"
        android:layout_height="44dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/etTitle" />

    <Button
        android:id="@+id/btnPickDate"
        android:layout_width="66dp"
        android:layout_height="45dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="28dp"
        android:text="@string/btnDate"
        android:textColor="#FFFFFF"
        android:textSize="8sp"
        android:textStyle="bold"
        app:backgroundTint="#673AB7"
        app:layout_constraintStart_toEndOf="@+id/etDate"
        app:layout_constraintTop_toBottomOf="@+id/etTitle" />

    <EditText
        android:id="@+id/etTime"
        android:layout_width="147dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/etDate" />

    <Button
        android:id="@+id/btnPickTime"
        android:layout_width="67dp"
        android:layout_height="42dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="18dp"
        android:text="@string/btnHeure"
        android:textColor="#FFFFFF"
        android:textSize="8sp"
        android:textStyle="bold"
        app:backgroundTint="#673AB7"
        app:layout_constraintStart_toEndOf="@+id/etTime"
        app:layout_constraintTop_toBottomOf="@+id/btnPickDate" />

    <EditText
        android:id="@+id/etContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="29dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/etTime" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginLeft="104dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/btnSave"
        android:textColor="#FFFFFF"
        app:backgroundTint="#673AB7"
        app:layout_constraintEnd_toStartOf="@+id/cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAdresse" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="97dp"
        android:layout_marginRight="97dp"
        android:text="@string/btnFermer"
        android:textColor="#000000"
        app:backgroundTint="#FAB1AEAE"
        app:iconTint="#36FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/save"
        app:layout_constraintTop_toBottomOf="@+id/etAdresse"
        app:rippleColor="#8A8A8A" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/adresse"
        android:textColor="#673AB7"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/etAdresse"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Button
        android:id="@+id/btnMaps"
        android:layout_width="66dp"
        android:layout_height="41dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="100dp"
        android:onClick="launchMaps"
        android:text="@string/btnMaps"
        android:textColor="#FFFFFF"
        android:textSize="8sp"
        android:textStyle="bold"
        app:backgroundTint="#673AB7"
        app:layout_constraintStart_toEndOf="@+id/etAdresse"
        app:layout_constraintTop_toBottomOf="@+id/etContact" />

    <EditText
        android:id="@+id/etAdresse"
        android:layout_width="147dp"
        android:layout_height="44dp"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/state" />

    <Button
        android:id="@+id/btnShare"
        android:layout_width="97dp"
        android:layout_height="43dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="#2B2B2B"
        android:onClick="shareMethod"
        android:text="@string/btnPartage"
        android:textColor="#020202"
        android:textSize="10sp"
        app:backgroundTint="#A5A4A4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="#808080" />

</androidx.constraintlayout.widget.ConstraintLayout>